# concerto

./: .gitignore  README.md  Transposed_Processed_Metabolomics_Data_NoRhodOutlier_6_14_24.csv  pyproject.toml  successful_hilneg.csv
.github/workflows/: python-publish.yml
CarbStor_Community_Models/: Community_Model_Information.py
Metabolic_Data_Files/: BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv  ProgramToTestMetaboliteData_HILPosAndHILNeg.py  Test_Metabolic_Data_File.py  successful_hilpos.csv
chai-1/: README.txt  README.txt~
concerto/: cookie_cutter.md  storage.py
concerto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
concerto/Metabolic_Data_Files/: BioCycID_Processed_Metabolomic_Data_NoRhodOutlier_6_14_24.tsv  Metabolite_Data.py  Transposed_Processed_Metabolomics_Data_NoRhodOutlier_6_14_24.csv
concerto/memotedata/: carveme  min_medium_csc043C-less_media.csv
concerto/notebooks/: biolog_file.ipynb  check_if_two_files_contain_same_metabolites.ipynb  compare_metabolites.ipynb  confirm_growth_add_carbon_sources_to_the_minimum_media.ipynb  create_community_model.ipynb  example_id_mapper.ipynb  generate_carveme.ipynb  generate_rich_media.ipynb  visualize_external_metabolomic_flow.ipynb
concerto/testing/: ProgramToTestMetaboliteData_HILPosAndHILNeg.py  Test_Metabolic_Data_File.py  create_carveme_mediadb_df.py  test_utils.py
concerto/utils/: __init__.py  (+5 more)
notebooks/: confirm_growth_add_carbon_sources_to_the_minimum_media.ipynb  visualize_external_metabolite_exchange.ipynb
tests/: test_community_modeling.py  test_metabolic_data_file.py
(+121 files in other folders)
